--- a/hand/readme.html
+++ b/hand/readme.html
@@ -173,7 +173,7 @@
 
       <h2 id="contact">Contact</h2>
 
-      <p>If you have questions about the data, please email the <a href="mailto:uaf-asf-apd@alaska.edu">ASF Tools Team</a></p>
+      <p>If you have questions about the data, please email the <a href="mailto:uaf-asf-apd@alaska.edu">ASF Tools Team</a>.</p>
 
       <h2 id="license">License</h2>
 
