Update HAND readme for hydrosar move

--- a/hand/readme.html
+++ b/hand/readme.html
@@ -33,8 +33,8 @@
 
       <h2 id="data-processing">Data processing</h2>
 
-      To generate the GLO-30 HAND, we used the <a href="https://hyp3-docs.asf.alaska.edu/tools/asf_tools_api/#asf_tools.hand.calculate">
-      ASF Tools</a> Python package, which is based on the HydroSAR <a href="https://github.com/fjmeyer/HydroSAR/blob/master/Big_Hand_notebook.ipynb">Big_Hand_notebook.ipynb</a>
+      To generate the GLO-30 HAND, we used the <a href="https://github.com/fjmeyer/HydroSAR">
+      HydroSAR</a> Python package, which is based on the HydroSAR <a href="https://github.com/fjmeyer/HydroSAR/blob/v1.0.0/notebooks/instructional/Big_Hand_notebook.ipynb">Big_Hand_notebook.ipynb</a>
       and uses <a href="https://github.com/mdbartos/pysheds">PySheds</a>, a library for simple and fast watershed delineation in Python.
       This involves:
 
