start fleshing out management stuff

--- a/shared/index.html
+++ b/shared/index.html
@@ -162,7 +162,7 @@ permissions and limitations under the License.
     var HIDE_INDEX = true;
     var s3exp_config = {
         Region: 'us-west-2',
-        Bucket: 'asf-event-data',
+        Bucket: '[OPENDATA_BUCKET_NAME]',
         Prefix: '',
         Delimiter: '/'
     };
